# sparql_http_client

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
sparql_http_client/: Cargo.toml  README.md
sparql_http_client/src/: client.rs  lib.rs  query.rs  response.rs
sparql_http_client/src/query/: ask.rs  error.rs  select.rs
sparql_http_client/src/response/: ask.rs  select.rs  select_stream.rs  term.rs
sparql_http_client_macros/: Cargo.toml
sparql_http_client_macros/src/: lib.rs
src/: client.rs  error.rs  lib.rs  query.rs  response.rs  responses.rs
src/query/: ask.rs  error.rs  select.rs
src/response/: ask.rs  select.rs
