[package]
name = "sparql_http_client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
spargebra = "0.2.8"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.86"
