[package]
name = "sparql_http_client"
version = "0.1.0"
edition = "2021"

[dependencies]
sparql_http_client_macros = { path = "../sparql_http_client_macros" }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
spargebra = "0.4.5"
thiserror = "1.0.61"
[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["macros", "rt", "time"] }
