[package]
name = "sparql_http_client"
version = "0.1.0"
edition = "2021"
description = "Async, typed SPARQL HTTP client with optional compile-time query validation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kauzarc/sparql_http_client"
keywords = ["sparql", "rdf", "semantic-web", "async"]
categories = ["network-programming", "database"]

[dependencies]
sparql_http_client_macros = { path = "../sparql_http_client_macros", version = "0.1.0" }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
spargebra = "0.4.5"
thiserror = "1.0.61"
[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
