[package]
name = "sparql_http_client"
version = "0.1.0"
edition = "2021"
description = "Async, typed SPARQL HTTP client with optional compile-time query validation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kauzarc/sparql_http_client"
readme = "README.md"
keywords = ["sparql", "rdf", "semantic-web", "async"]
categories = ["network-programming", "database"]

[dependencies]
sparql_http_client_macros = { path = "../sparql_http_client_macros", version = "0.1.0" }
reqwest = { version = "0.13.2", features = ["json", "stream", "form"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
spargebra = "0.4.5"
thiserror = "1.0.61"
async-stream = "0.3.6"
csv-async = { version = "1.3.1", features = ["tokio"] }
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["io"] }
[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
